--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
 body {
     font-family: 'Roboto', 'Raleway', sans-serif;
     background-color: white;
@@ -6,15 +12,29 @@ body {
     letter-spacing: 0.02;
     font: size 16px;
 }
+img{
+    display: block;
+}
+.container {
+    max-width: 1158px;
+    padding: 0 15px;;
+    margin: 0 auto;
+    
+}
 .header{
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    
     line-height: 1.17;
     letter-spacing: 0.03em;
+    
 }
-
- 
+.navbar-list{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 40px;
+}
 .logo {
     font-family: 'Raleway', sans-serif;
     text-transform: uppercase;
@@ -25,6 +45,11 @@ body {
     line-height: 1.17;
     font-size: 18px;
     letter-spacing: 0.03em;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 0px;
     }
 .navbar .logo:hover,
 .navbar .logo:focus{
@@ -50,8 +75,15 @@ body {
 .contact{
     font-style: normal;
     font-weight: 400;
+    
 }
-
+.contact-list{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 40px;
+}
 .contact-way {
     line-height:1.5;
     letter-spacing: 0.02em;
@@ -89,9 +121,19 @@ body {
     background-color: #404BBF;
 }
 
-.strengths-section-title{
+.visually-hidden{
     font-weight: 700;
     letter-spacing: 0.02em;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 .strengths-list-title{
     font-weight: 500;
@@ -135,6 +177,10 @@ body {
     font-weight: 400;
     line-height: 1.5;
     
+}
+
+.portfolio{
+    display: flex-inline;
 }
 .portfolio-title {
     font-weight: 700;
