--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,9 @@ h6,
 p {
     margin: 0;
 }
+
+
+
 .container {
     max-width: 1158px;
     padding: 0 15px;;
@@ -122,17 +125,33 @@ p {
 .contact-way:hover {
     color: #404bbf;
 }
+
+
 .title{
     background-color: #2e2f42;
+    height: 600px;
+}
+.container-title{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
    
 }
 .title-capture{
+    display: block;
     color: #ffffff;
     font-size:56px;
     font-weight: bold;
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
+    width: 496px;
+    height: 120px;
+    padding-top: 188px;
+    padding-bottom: 36px;
+    margin-bottom: 59px;
+
    }
 .order-button{
     background-color:#4d5ae5;
@@ -143,6 +162,14 @@ p {
     line-height: 1.5;
     letter-spacing:0.04em;
     cursor: pointer;
+    border-radius: 4px;
+    padding: 16px 32px;
+    display: flex;
+    width: 169px;
+    height: 56px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 59px;
 }
 .order-button:hover, .order-button:focus{
     background-color: #404BBF;
