--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,7 @@ p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
    
 }
 .title-capture{
@@ -189,12 +190,30 @@ p {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+
+.strengths-list{
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    margin-top: 120px;
+    margin-bottom: 120px;
+
+}
+.strengths-item{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    width: calc((100%-24px*3)/4);
+
+}
 .strengths-list-title{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     color: #2e2f42;
     letter-spacing: 0.02em;
+
     
 }
 .strengths-list-text{
@@ -204,6 +223,9 @@ p {
 }
 .team{
     background-color: #F4F4FD;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    margin-bottom: 107px;
 }
 .team-title {
     font-weight: 700;
@@ -213,11 +235,30 @@ p {
     text-transform: capitalize;
     color: #2e2f42;
     letter-spacing: 0.02em;
+    margin-bottom: 74px;
 
 }
 .team-list{
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    margin-bottom: 120px;
+    
+}
+.team-list-item{
     background-color: #FFFFFF;
     letter-spacing: 0.02em;
+        
+        width: calc((100%-24px*3)/4);
+}
+.team-member{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 8px;
+    margin-top: 12px;
+    margin-bottom: 22px;
 }
 .team-list-title {
     font-weight: 500;
@@ -225,6 +266,8 @@ p {
     line-height: 1.2;
     color: #2e2f42;
     letter-spacing: 0.02em;
+    
+   
 }
 
 .team-list-text {
