--- a/css/styles.css
+++ b/css/styles.css
@@ -277,7 +277,8 @@ p {
 }
 
 .portfolio{
-    display: flex-inline;
+    margin-top: 106px;
+    margin-bottom: 147px;
 }
 .portfolio-title {
     font-weight: 700;
@@ -288,20 +289,42 @@ p {
     color:#2e2f42;
     letter-spacing: 0.02em;
 }
-
+.portfolio-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    padding-top: 77px;
+    padding-bottom: 19px;
+    margin-bottom: 147px;
+}
+.portfolio-list-item{
+    width: calc((100%-24*2)/3);
+}
 .portfolio-list-title {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     color: #2e2f42;
     letter-spacing: 0.02em;
+    display: block;
 }
 
 .portfolio-list-text {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    display: block;
 }
+.portfolio-description{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 8px;
+    margin-top: 12px;
+    margin-bottom: 22px;
+    }
+
 .footer{
     background-color: #2e2f42;
     color: #ffffff;
