--- a/css/styles.css
+++ b/css/styles.css
@@ -317,13 +317,12 @@ p {
 }
 .portfolio-description{
     display: flex;
-    align-items: center;
     justify-content: flex-start;
     flex-direction: column;
-    gap: 8px;
-    margin-top: 12px;
-    margin-bottom: 22px;
-    }
+    gap: 18px;
+    margin-top: 35px;
+    margin-bottom: 38px;
+}
 
 .footer{
     background-color: #2e2f42;
@@ -332,6 +331,11 @@ p {
     line-height: 1.17;
     letter-spacing: 0.03em;  
     font-weight: 400;
+    height: 312px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 108px 0;
 }
 .footer .span-studio {
     color: #f4f4fd;
@@ -341,4 +345,13 @@ p {
     line-height: 1.5;
     color: #f4f4fd;
     letter-spacing: 0.02em;
+    display: block;
+}
+.footer-container{
+    
+    display: flex;
+    flex-direction: column;
+    width: 264px;
+    height: 112px;
+    text-align: left;
 }
