--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ p {
     line-height: 1.17;
     font-size: 18px;
     letter-spacing: 0.03em;
+    text-align: left;
     
     }
   .navbar {
@@ -248,8 +249,7 @@ p {
 .team-list-item{
     background-color: #FFFFFF;
     letter-spacing: 0.02em;
-        
-        width: calc((100%-24px*3)/4);
+    width: calc((100%-24px*3)/4);
 }
 .team-member{
     display: flex;
@@ -327,31 +327,36 @@ p {
 .footer{
     background-color: #2e2f42;
     color: #ffffff;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.17;
     letter-spacing: 0.03em;  
     font-weight: 400;
-    height: 312px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    text-align: left;
+    
+        
     padding: 108px 0;
+    
 }
 .footer .span-studio {
     color: #f4f4fd;
     line-height: 1.17;
+    text-align: left;
 }
 .footer-text{
     line-height: 1.5;
     color: #f4f4fd;
     letter-spacing: 0.02em;
-    display: block;
+    width: 264px;
+    height: 72px;
 }
 .footer-container{
     
     display: flex;
     flex-direction: column;
-    width: 264px;
-    height: 112px;
+    justify-content: flex-start;
+    
     text-align: left;
+    padding: 0 15px;
+    
+    
 }
