--- a/css/styles.css
+++ b/css/styles.css
@@ -288,6 +288,9 @@ p {
     padding-top: 120px;
     padding-bottom: 120px;
 }
+.portfolio-container{
+    border-top: none;
+}
 .portfolio-title {
     font-weight: 700;
     font-size:36px;
@@ -308,6 +311,11 @@ p {
 .portfolio-list-item{
     width: calc((100%-48px)/3);
 }
+
+.portfolio-img{
+    width: calc((100% - 48px) / 3);
+}
+
 .portfolio-list-title {
     font-weight: 500;
     font-size: 20px;
@@ -357,7 +365,7 @@ p {
     width: 264px;
     height: 72px;
 }
-.footer.logo{
+.down-logo{
     display: inline-block;
     margin-bottom: 16px;
 }
