--- a/css/styles.css
+++ b/css/styles.css
@@ -308,11 +308,11 @@ p {
     
 }
 .portfolio-list-item {
-    width: calc((100%-48px)/3);
+   
 }
 
 .portfolio-img {
-    width: calc((100%-48px)/3);
+    width: calc ( ( 100% - 48px ) / 3 );
 }
 
 .portfolio-list-title {
