--- a/css/styles.css
+++ b/css/styles.css
@@ -202,8 +202,8 @@ a{
 .strengths-list{
     display: flex;
     align-items: center;
-    gap: 24px;calc((100%-24px*3)/4);
-    flex-basis:
+    gap: 24px;
+    flex-basis:calc((100%-24px*3)/4);
     margin-top: 120px;
     margin-bottom: 120px;
 
@@ -222,7 +222,7 @@ a{
     line-height: 1.2;
     color: #2e2f42;
     letter-spacing: 0.02em;
-
+    margin-bottom: 8px;
 
     
 }
@@ -245,7 +245,7 @@ a{
     text-transform: capitalize;
     color: #2e2f42;
     letter-spacing: 0.02em;
-    padding-bottom: 72px;
+    margin-bottom: 72px;
 
 }
 .team-list{
@@ -275,7 +275,7 @@ a{
     color: #2e2f42;
     letter-spacing: 0.02em;
     text-align: center;
-    padding-bottom: 8px;
+    margin-bottom: 8px
     
    
 }
