--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,7 @@ a{
     display: flex;
     align-items: center;
     gap: 24px;
-    flex-basis:calc((100%-24px*3)/4);
+    
     margin-top: 120px;
     margin-bottom: 120px;
 
@@ -213,8 +213,7 @@ a{
     align-items: flex-start;
     justify-content: flex-start;
     flex-direction: column;
-
-
+    width: calc((100% - 72px) / 4);
 }
 .strengths-list-title{
     font-weight: 500;
