--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ a{
     text-align: center;
     letter-spacing: 0.02em;
    
-    padding-bottom: 36px;
+    margin-bottom: 48px;
     
     max-width: 496px;
 
@@ -203,9 +203,7 @@ a{
     display: flex;
     align-items: center;
     gap: 24px;
-    
-    margin-top: 120px;
-    margin-bottom: 120px;
+   
 
 }
 .strengths-item{
@@ -230,6 +228,9 @@ a{
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
+
+/* team */
+
 .team{
     background-color: #F4F4FD;
     padding-top: 120px;
