--- a/css/styles.css
+++ b/css/styles.css
@@ -207,10 +207,7 @@ a{
 
 }
 .strengths-item{
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: column;
+  
     width: calc((100% - 72px) / 4);
 }
 .strengths-list-title{
@@ -252,8 +249,7 @@ a{
     display: flex;
     align-items: center;
     gap: 24px;
-    flex-basis: calc((100%-24px*3)/4);
-    
+    flex-basis: calc((100% - 3*24px) / 4);
 }
 .team-list-item{
     background-color: #FFFFFF;
@@ -261,11 +257,6 @@ a{
     border-radius: 0px 0px 4px 4px;
 }
 .team-member{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 8px;
     padding: 32px 0;
 }
 .team-list-title {
@@ -276,8 +267,7 @@ a{
     letter-spacing: 0.02em;
     text-align: center;
     margin-bottom: 8px
-    
-   
+       
 }
 
 .team-list-text {
@@ -311,13 +301,6 @@ a{
     flex-basis: calc ((100% - 48px) / 3);
     
 }
-.portfolio-list-item {
-   
-}
-
-.portfolio-img {
-    
-}
 
 .portfolio-list-title {
     font-weight: 500;
@@ -337,10 +320,6 @@ a{
     display: block;
 }
 .portfolio-description{
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
-    gap: 18px;
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
